--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ h3 {
     margin-bottom: 25px;
 }
 
+.fontChanges {
+    font-size: 17px;
+}
+
 button {
     background: linear-gradient(135deg, #3b82f6, #2563eb);
     color: white;
@@ -61,7 +65,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
     font-size: 1.1rem;
     font-weight: 500;
     background-color: #f9fafb;
